# Progressive_Robotics

./: .clang-format  .editorconfig  .gitignore  .gitmodules  DEVLOG.md  Dockerfile  README.md  docker-compose.yml
src/linear_algebra_nodes/: CMakeLists.txt  package.xml
src/linear_algebra_nodes/config/: input.yaml  input_M3.yaml  input_M7.yaml
src/linear_algebra_nodes/src/: client_node.cpp  server_node.cpp
src/linear_algebra_service/: CMakeLists.txt  package.xml
src/linear_algebra_service/srv/: LeastSquareContract.srv
src/ur20_display/: CMakeLists.txt  package.xml
src/ur20_display/include/ur20_display/: ur20_display_node.hpp
src/ur20_display/launch/: ur20_display_launch.py
src/ur20_display/rviz/: ur20_display.rviz
src/ur20_display/scripts/: trajectory_plotter.py
src/ur20_display/src/: ur20_display_node.cpp
src/ur20_display/urdf/: ur20_with_gripper.urdf.xacro
