<?xml version="1.0"?>
<package format="3">
	<name>linear_algebra_service</name>
	<version>0.0.0</version>
	<description>Service interface package for linear algebra operations.</description>

	<maintainer email="psiridis.konstantinos@gmail.com">Konstantinos Psyridis</maintainer>
	<license>Apache-2.0</license>

	<buildtool_depend>ament_cmake</buildtool_depend>

	<build_depend>geometry_msgs</build_depend>
	<build_depend>rosidl_default_generators</build_depend>

	<exec_depend>geometry_msgs</exec_depend>
	<exec_depend>rosidl_default_runtime</exec_depend>

	<member_of_group>rosidl_interface_packages</member_of_group>

	<export>
		<build_type>ament_cmake</build_type>
	</export>
</package>
